# matlab_neural_net_matrix_ops

./: .gitignore  README.md  demo_fnn_forward.m  demo_gru_forward.m  demo_lstm_forward.m  main.py  pyproject.toml  silverbox_data.mat  train_and_export_networks.ipynb
functions/: fcn_normalize.m  nn_fnn_1_layer.m  nn_fnn_n_layer.m  nn_gru_1_layer.m  nn_gru_n_layer.m  nn_lstm_1_layer.m  nn_lstm_n_layer.m
models/: FNN_model_1layer.json  FNN_model_3layer.json  GRU_model_1layer.json  GRU_model_3layer.json  LSTM_model_1layer.json  LSTM_model_3layer.json
