[project]
name = "matlab-neural-net-matrix-ops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastprogress==1.0.3",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "torch>=2.8.0",
    "tsfast>=0.1.8",
]
